# instance-discovery-service

./: .gitignore  .gitmodules  Dockerfile  README.md  celery_app.py  docker-compose.yml  env.example  main.py  paths.py  pyproject.toml
app/: __init__.py  state.py
app/routes/: images.py  inference.py  models.py  upload_image.py
app/schemas/: inference.py
integrated_models/: base_models.py  few_shot_finetuning.py  geco_model.py  model_registry.py  register_models.py  sam3.py  sansa_detection.py  simple_thresholding_model.py
integrated_models/encoders/: dino_encoder.py  encoder_base_class.py
integrated_models/similarity/: cosine_similarity.py
models/: base_models.py  cosine_similarity_model.py  dbscan_predictor.py  few_shot_finetuning.py  geco_model.py  knn_graph_predictor.py  model_cache.py  model_registry.py  register_models.py  sam3.py  sansa_detection.py  simple_thresholding_model.py  watershed_dino.py
models/encoders/: dino.py  dino_encoder.py  encoder.py  encoder_base_class.py
models/feature_extractors/: dino.py
models/predictors/: cosine_similarity_predictor.py  predictor.py
models/similarity/: cosine_similarity.py  similarity_base_class.py
util/: blob_detector.py  debug.py  misc.py  postprocess.py  threshold.py
