[project]
name = "coral-completion-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "celery>=5.6.2",
    "einops>=0.8.2",
    "fastapi[standard]",
    "geco",
    "huggingface-hub>=1.3.0",
    "hydra-core>=1.3.2",
    "iquana-toolbox",
    "omegaconf>=2.3.0",
    "opencv-python",
    "plotly",
    "py3-wget>=1.0.13",
    "pycocotools",
    "pydantic",
    "scikit-learn",
    "scipy-stubs",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm",
    "transformers>=5.0.0",
]

[tool.uv.sources]
geco = { git = "https://github.com/robertleist/GeCo.git" }
iquana-toolbox = { git = "https://github.com/Iquana-tool/iquana-toolbox.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
